--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "arc-agi-2"
 version = "0.1.0"
 description = "ARC-AGI-2: Abstraction and Reasoning Corpus research project"
 readme = "readme.md"
-requires-python = ">=3.8"
+requires-python = ">=3.8,<3.13"
 license = {text = "MIT"}
 authors = [
     {name = "ARC-AGI-2 Team"},
@@ -28,7 +28,7 @@ dependencies = [
     "numpy>=1.21.0",
     "matplotlib>=3.5.0",
     "pandas>=1.3.0",
-    "torch>=1.12.0",
+    "torch>=2.0.0,<2.3.0",
     "transformers>=4.20.0",
     "scikit-learn>=1.1.0",
     "jupyter>=1.0.0",
