--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dev = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
     "black>=22.0.0",
+    "flake8>=6.0.0",
     "ruff>=0.1.0",
     "pre-commit>=2.20.0",
     "mypy>=1.0.0",
@@ -56,7 +57,7 @@ where = ["."]
 include = ["arc*"]
 
 [tool.black]
-line-length = 88
+line-length = 119
 target-version = ['py38']
 include = '\.pyi?$'
 extend-exclude = '''
@@ -75,7 +76,7 @@ extend-exclude = '''
 
 [tool.ruff]
 target-version = "py38"
-line-length = 88
+line-length = 119
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
@@ -106,3 +107,20 @@ python_version = "3.8"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+
+[tool.flake8]
+max-line-length = 119
+extend-ignore = [
+    "E203",  # whitespace before ':'
+    "E501",  # line too long (handled by black)
+    "W503",  # line break before binary operator
+]
+exclude = [
+    ".git",
+    "__pycache__",
+    ".venv",
+    "venv",
+    "build",
+    "dist",
+    "*.egg-info",
+]
