--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,14 +25,40 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
-    "numpy>=1.21.0",
-    "matplotlib>=3.5.0",
-    "pandas>=1.3.0",
-    "torch>=2.0.0,<2.3.0",
-    "transformers>=4.20.0",
-    "scikit-learn>=1.1.0",
-    "jupyter>=1.0.0",
-    "ipykernel>=6.0.0",
+    # Core scientific computing - exact versions from conda env
+    "numpy==1.24.4",
+    "matplotlib==3.7.5",
+    "pandas==2.0.3",
+    "scipy==1.10.1",
+    "scikit-learn==1.3.2",
+    
+    # PyTorch ecosystem - exact versions
+    "torch==2.2.2",
+    "torchvision==0.17.2",
+    "torchaudio==2.2.2",
+    
+    # Transformers and ML
+    "transformers==4.46.3",
+    "huggingface-hub==0.36.0",
+    "tokenizers==0.20.3",
+    "safetensors==0.5.3",
+    
+    # Jupyter environment
+    "jupyter==1.1.1",
+    "ipykernel==6.29.5",
+    "ipython==8.12.3",
+    "ipywidgets==8.1.8",
+    
+    # Visualization
+    "seaborn==0.13.2",
+    "plotly==6.4.0",
+    "pillow==10.4.0",
+    
+    # Utilities
+    "tqdm==4.67.1",
+    "pyyaml==6.0.3",
+    "requests==2.32.4",
+    "packaging==25.0",
 ]
 
 [project.optional-dependencies]
